fix scss spacing and added yt/fb feature in js

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,13 +60,13 @@ header {
 
 .links {
   display: grid;
-  grid-template-columns: 16.5% 16.5% 16.5%;
+  grid-template-columns: 33.3% 33.3% 33.3%;
   grid-template-rows: 25vh;
   padding-top: 5vh;
   
   font-size: 1rem;
   ul {
-    margin-left: 15vw;
+    margin-left: 12vw;
   }
 }
 
